manifests/agnhost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: agnhost
  name: agnhost
