manifests/agnhost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agnhost
  name: agnhost
  namespace: agnhost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agnhost
  template:
    metadata:
      labels:
        app: agnhost
    spec:
      containers:
      - name: agnhost
        command:
        - /agnhost
        - netexec
        - --http-port=8080
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
