manifests/agnhost/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '8080'
  labels:
    app: agnhost
  name: agnhost
  namespace: agnhost
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: agnhost
  type: ClusterIP
